Twenty Thirteen: Fix alignment of child blocks within the Cover block.
Props kjellr, melchoyce.
Fixes #51224.


Built from https://develop.svn.wordpress.org/trunk@50346


git-svn-id: http://core.svn.wordpress.org/trunk@49957 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/css/blocks.css
+++ b/wp-content/themes/twentythirteen/css/blocks.css
@@ -194,6 +194,20 @@ p.has-drop-cap:not(:focus)::first-letter {
 	display: flex;
 }
 
+body:not(.sidebar) .wp-block-cover > .wp-block-cover__inner-container > * {
+	width: 604px;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@media screen and (min-width: 665px) {
+	body:not(.sidebar) .wp-block-cover__inner-container > .wp-block-group.alignfull, 
+	body:not(.sidebar) .wp-block-cover__inner-container > .wp-block-group.has-background.alignfull {
+		padding: 20px;
+	}
+}
+
 /* File */
 
 .wp-block-file .wp-block-file__button {
